--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <h1>Ez egy nagyon menő étterem.</h1>
 <p>Elképesztő ételek.</p>
- <p>Zenés vacsora, meghitt környezet.</p>
+<h3>Zenés vacsora, meghitt környezet.</h3>
 
 </body>
 </html>
